--- a/src/components/Pages/DoctorTeam/Doctor.css
+++ b/src/components/Pages/DoctorTeam/Doctor.css
@@ -376,14 +376,14 @@
 /* Doctor List */
 .doctor-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* luôn 3 thẻ mỗi hàng */
+  grid-template-columns: repeat(3, 420px); /* Mỗi thẻ rộng 420px */
+  justify-content: center;
   gap: 40px;
-  justify-items: center;
-  max-width: 1200px; /* hoặc 1400px tùy theo bạn */
-  margin: 0 auto; /* canh giữa */
   padding: 40px 20px;
   box-sizing: border-box;
 }
+
+
 
 
 /* Pagination */
